config_frontend_envoy.yaml
# dynamic_resources:
#   resources:
#     - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
#       name: frontend_cluster_2
#       lb_policy: ROUND_ROBIN
#       connect_timeout: 0.50s
#       type: STRICT_DNS
#       load_assignment:
#         cluster_name: frontend_cluster_2
#         endpoints:
#         - lb_endpoints:
#           - endpoint:
#               address:
#                 socket_address:
#                   address: frontend
#                   port_value: 8080

# https://dev.to/ishankhare07/dabbling-with-envoy-configurations-part-i-3lfi

# https://github.com/envoyproxy/envoy/issues/17228
# https://github.com/envoyproxy/envoy/pull/10553
# https://github.com/envoyproxy/envoy/issues/9847
# https://github.com/envoyproxy/envoy/blob/26da59944339363e7b6e90664f55b9f73b5923b5//configs/envoyproxy_io_proxy_http3_downstream.yaml
# https://tools.keycdn.com/brotli-test

static_resources:
  listeners:

  - name: rentcarmallorca_80
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          use_remote_address: true

          xff_num_trusted_hops: 0
          normalize_path: true
          merge_slashes: true
          path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
          
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

          route_config:
            name: local_route_web
            virtual_hosts:
            # - name: sin_www_service
              # domains:
              # - "rentcarmallorca.es"
              # routes:
              # - match:
                  # prefix: "/"
                # redirect:
                  # host_redirect: "www.rentcarmallorca.es"
                  # https_redirect: true
                  # host_redirect: "rentcarmallorca.es"
                
            - name: www_service
              domains:
              # - "www.rentcarmallorca.es"
              - "*"
              routes:
              - match:
                  prefix: "/.well-known/acme-challenge/"
                route:
                  cluster: frontend_cluster
              - match:
                  prefix: "/"
                redirect:
                  # path_redirect: "/"
                  https_redirect: true
                  # port_redirect: 443
          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 5242880
          - name: "envoy.filters.http.cache"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig"
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
          - name: envoy.filters.http.compressor
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
              response_direction_config:
                common_config:
                  min_content_length: 100
                  content_type:
                  - text/html
                  - text/plain
                  - text/css
                  - text/xml
                  - text/javascript
                  - application/json
                  - application/javascript
                  - application/x-javascript 
                  - application/xml
                  - application/xml+rss
                  - application/xhtml+xml
                  - image/svg+xml
                disable_on_etag_header: true
              compressor_library:
                name: text_optimized
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                  memory_level: 3
                  window_bits: 10
          # - name: envoy.health_check
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
          #     pass_through_mode: false
          #     headers:
          #       - name: ":path"
          #         exact_match: "/.well-known/acme-challenge/"
          - name: envoy.filters.http.router
          common_http_protocol_options:
              idle_timeout: 840s

          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536  # 64 KiB
            initial_connection_window_size: 1048576  # 1 MiB
          stream_idle_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
          request_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
# -----------------------------------------------
  - name: rentcarmallorca_443
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP2
          stat_prefix: ingress_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: frontend_cluster
                  
          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 5242880
          - name: "envoy.filters.http.cache"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig"
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
          - name: envoy.filters.http.compressor
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
              response_direction_config:
                common_config:
                  min_content_length: 100
                  content_type:
                  - text/html
                  - text/plain
                  - text/css
                  - text/xml
                  - text/javascript
                  - application/json
                  - application/javascript
                  - application/x-javascript 
                  - application/xml
                  - application/xml+rss
                  - application/xhtml+xml
                  - image/svg+xml
                disable_on_etag_header: true
              compressor_library:
                name: text_optimized
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                  memory_level: 3
                  window_bits: 10
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/cert.pem"
                private_key:
                  filename: "/etc/privkey.pem"
            alpn_protocols: [ "h2,http/1.1" ]
  
  - name: backoffice
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3100
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP2
          stat_prefix: ingress_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/0_QJFs2NH9a_f_a_BQ_NTib_Y3O6Ik_DkWIiW_mFtZSI"
                route:
                  cluster: backoffice_cluster
              
          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 5242880
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/cert.pem"
                private_key:
                  filename: "/etc/privkey.pem"
            alpn_protocols: [ "h2,http/1.1" ]
  - name: netdata_stats
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 19999
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP2
          stat_prefix: ingress_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: netdata_cluster
              
          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 5242880
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/cert.pem"
                private_key:
                  filename: "/etc/privkey.pem"
            alpn_protocols: [ "h2,http/1.1" ]




  
  clusters:
  - name: netdata_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.50s
    load_assignment:
      cluster_name: netdata_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: netdata
                port_value: 19999
  - name: frontend_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.50s
    health_checks:
      timeout: 3s
      interval: 120s
      unhealthy_threshold: 3
      healthy_threshold: 3
      # no_traffic_interval: 60s
      always_log_health_check_failures: false
      http_health_check:
        path: /islive_0_QJFs_a_IiW_mFtZS2_f_A_BQ_NTib_Y3O6Ik_D0WNH9I
    load_assignment:
      cluster_name: frontend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frontend
                port_value: 8080
  - name: backoffice_cluster
    type: STRICT_DNS
    connect_timeout: 0.50s
    lb_policy: ROUND_ROBIN
    health_checks:
      timeout: 3s
      interval: 120s
      unhealthy_threshold: 3
      healthy_threshold: 3
      # no_traffic_interval: 60s
      always_log_health_check_failures: false
      http_health_check:
        path: /islive_0_QJFs_a_IiW_mFtZS2_f_A_BQ_NTib_Y3O6Ik_D0WNH9I
    load_assignment:
      cluster_name: backoffice_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backoffice
                port_value: 3100
    # typed_extension_protocol_options:
    #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #     explicit_http_config:
    #       http2_protocol_options:
    #         initial_stream_window_size: 65536  # 64 KiB
    #         initial_connection_window_size: 1048576  # 1 MiB
# admin:
#   address:
#     socket_address:
#       address: 0.0.0.0
#       port_value: 8081
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            rentcarmallorca|80:
              connection_limit: 10000
      overload:
        global_downstream_max_connections: 50000
