frontenvoy_config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: frontend_basico
              domains:
              - "frontend_basico.rentcarmallorca.es"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: frontend_basico
            - name: frontend
              domains:
              - "frontend.rentcarmallorca.es"
              routes:
              - match:
                  prefix: "/rent"
                route:
                  cluster: frontend
          http_filters:
          - name: envoy.filters.http.router
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/cert.pem"
              private_key:
                filename: "/etc/privkey.pem"
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: frontend
              domains:
              - "frontend.rentcarmallorca.es:8080"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: frontend
          http_filters:
          - name: envoy.filters.http.router
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/cert.pem"
              private_key:
                filename: "/etc/privkey.pem"

  clusters:
  - name: frontend
    connect_timeout: 15s
    type: strict_dns
    http_protocol_options: {}
    tls_context: {}
    load_assignment:
      cluster_name: frontend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frontend.rentcarmallorca.es
                port_value: 8080
  - name: openstack-backend
    connect_timeout: 15s
    type: strict_dns
    load_assignment:
      cluster_name: openstack-backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.200.100.230
                port_value: 80
  - name: openstack-backend-api
    connect_timeout: 15s
    type: strict_dns
    load_assignment:
      cluster_name: openstack-backend-api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.200.100.230
                port_value: 5000

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
